--- a/portfolio/src/layout.css
+++ b/portfolio/src/layout.css
@@ -1,35 +1,40 @@
 @font-face {
-    font-family: aloe;
-    src: url(had.ttf);
+    font-family: kei;
+    src: url(kei.ttf);
 }
 
 header a {
-    font-family: aloe;
-    color: #282119;
+    font-family: kei;
+    color: #ffffff;
     transition: all 0.2s ease-in-out;
     letter-spacing: .2rem;
 }
 
 header a:hover {
-    color: #586275;
+    color: #a9bbc5;
 }
 
 header {
-    background-color: #8c9cb0;
-    border-bottom: 1px solid #282119;
+    background-color: #000000;
+    padding: 15px;
 }
 
 footer {
-    font-family: aloe;
+    font-family: kei;
     letter-spacing: .2rem;
-    background-color: #b1b9c1;
-    border-top: 1px solid #282119;
+    background-color: #000000;
+
 }
 
 footer a {
     max-width: 25px;
     transition: all 0.2s ease-in-out;
 }
+
+footer span {
+    color: #ffffff;
+}
+
 footer a:hover {
     opacity: 0.7;
 }
