--- a/portfolio/src/pages/secstyle.css
+++ b/portfolio/src/pages/secstyle.css
@@ -10,13 +10,13 @@
 
 h1 {
     font-family: kei;
-    color: #e8e8e8;
+    color: #fff;
     letter-spacing: .5rem;
 }
 
 .herotext {
     font-family: Robo;
-    color: #e8e8e8;
+    color: #fff;
     letter-spacing: .2rem;
 }
 
@@ -408,6 +408,7 @@ h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: url(./home3.jpg);
 }
 
 .tech-stack h2 {
@@ -466,7 +467,7 @@ h1 {
 }
 
 .read-more:hover {
-    background-color: #525665;
+    background-color: #494949;
 }
 
 .pro-page a {
@@ -474,19 +475,18 @@ h1 {
 }
 
 .input {
-    border: 1px solid #525665;
+    border: 1px solid #000;
     padding: 15px;
-    background-color: #b1b9c1;
+    background-color: #000;
     font-size: small;
     font-weight: bold;
     font-family: Robo;
     }
 
 .input:focus {
-    outline-color: #525665;
-    background-color: #9da5ad;
-    color: #1c2027;
-    box-shadow: 5px 5px #858d96;
+    outline-color: #fff;
+    color: #fff;
+    box-shadow: 5px 5px #494949;
     }
 
 .input-label {
@@ -504,27 +504,31 @@ h1 {
     text-align: center;
     text-decoration: none;
     color: #fff;
-    background-color: #b1b9c1;
-    border: 1px solid #1c2027;
-    /* box-shadow: 5px 5px 0px #858d96; */
+    background-color: #000;
     transition: all 0.3s ease;
 }
 
 .comic-button:hover {
     background-color: #fff;
-    color: #858d96;
-    border: 1px solid #1c2027;
-    box-shadow: 5px 5px 0px #858d96;
+    color: #000;
+    border: 1px solid #000;
+    box-shadow: 5px 5px 0px #494949;
 }
 
 .comic-button:active {
-    background-color: #3f4858;
+    background-color: #494949;
     box-shadow: none;
     transform: translateY(4px);
 }
 
 .contact {
     font-family: Robo;
+}
+
+.contact h1 {
+    font-family: kei;
+    letter-spacing: .2rem;
+    font-size: 60px;
 }
 
 .card {
@@ -575,4 +579,17 @@ h1 {
 
 .card-footer a:hover {
     color: var(--main-color);
+}
+
+.contact-links {
+    color: #fff;
+    text-align: center;
+}
+
+.contact-links a {
+    transition: all ease-in-out 0.3s;
+}
+
+.contact-links a:hover {
+    color: #494949;
 }
