made updates to pages

--- a/portfolio/src/layout.css
+++ b/portfolio/src/layout.css
@@ -140,7 +140,7 @@ header {
 .main-hero {
     display: flex;
     margin-top: 200px;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
     justify-content: center;
     gap: 15px;
 
@@ -152,7 +152,7 @@ header {
 }
 
 .hero-1 img {
-    max-width: 100px;
+    max-width: 120px;
     filter: grayscale(70%) sepia(60%);
     transition: transform 1s ease-in-out;
     background-color: var(--dark);
@@ -178,7 +178,7 @@ header {
 }
 
 .hero-2 h1 {
-    font-size: 2em;
+    font-size: 4em;
     padding: 0px;
     margin: 0px;
     color: var(--dark);
@@ -506,33 +506,6 @@ h2 {
     color: var(--dark);
 }
 
-/* .fun-text {
-    padding: 0px 20px;
-    font-family: 'Space', sans-serif;
-}
-
-.fun-text p {
-    font-size: 50px;
-    margin-bottom: 100px;
-}
-
-.highlight {
-    color: var(--light);
-    text-shadow: 3px 3px 0px var(--dark);
-    text-decoration: underline;
-}
-
-.highlight:hover {
-    color: var(--dark);
-    text-shadow: none;
-    text-decoration: none;
-    color: var(--white);
-}
-
-.f1:hover {
-    background-color: var(--light);
-} */
-
 .nav-position {
     position: fixed;
     z-index: 500;
@@ -599,4 +572,57 @@ h2 {
     font-size: 12px;
     opacity: 1;
     transition: opacity 0.3s ease-in-out;
+}
+
+.fun-text {
+    font-family: 'Space';
+    font-size: 40px;
+    margin-bottom: 100px;
+    padding-left: 10px;
+}
+
+.f1 {
+    color: var(--midtone);
+}
+
+.f1:hover {
+    color: var(--midtone);
+    transition: all 0.2s ease-in-out;
+    background-color: var(--light);
+}
+
+.page-body {
+    margin-top: 200px;
+    font-family: 'Space';
+}
+
+.about-main {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+}
+
+.about-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 60px;
+    width: 100%;
+    border-bottom: var(--light) solid 5px;
+}
+
+.about-pfp {
+    background-color: var(--dark);
+    max-width: 180px;
+    filter: grayscale(70%) sepia(60%);
+}
+
+.about-pfp:hover {
+    filter: grayscale(0%) sepia(0%);
+}
+
+.about-slogan {
+    font-size: 25px;
+    border-bottom: var(--light) solid 2px;
+    padding-bottom: 5px;
 }
